# wodilist

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: bench.py
wodilist/: cli.py  detect.py  formatter.py  git.py  scanner.py
